--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
         <p class="textVerify text-success text-center h2 my-3 flex-grow-1"><span class="value-of-exchange">0</span> so'm</p>
       </div>
-      <p class="opacity-0 text-minus display-4  text-success text-center h2 my-3 flex-grow-1">biz qarzga ishlamaymiz 😡 🤣 🤣 🤣 🤣 🤣 🤣 </p>
+      <p class="d-none opacity-0 text-minus display-4  text-success text-center h2 my-3 flex-grow-1">biz qarzga ishlamaymiz 😡 🤣 🤣 🤣 🤣 🤣 🤣 </p>
       <button class="submit-btn btn btn-success" type="submit">Submit</button>
       
     </form>
