--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row justify-content-between w-100 align-items-center">
         <input name="number-of-exchange" autocomplete="off" spellcheck="false" placeholder="Baribir $ maydalashga kelgansan (rostini ayt hech kimga aytmayman :)) )" class="number-of-exchange form-control w-50 flex-shrink-0" type="number">
         <select required name="rasul" class="currency-type mx-2" id="birnima">
-          <option class="text-uppercase" disabled value="none">Qaysi turidan bor</option>
+          <!-- <option class="text-uppercase" disabled value="none">Qaysi turidan bor</option> -->
           <option class="text-uppercase" value="10334">USD</option>
           <option class="text-uppercase" value="12130">EURO</option>
           <option class="text-uppercase" value="1548.13">CNY</option>
