--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </h2>
     <form class="exchange-form d-flex mx-3 flex-column align-items-center w-100" action="https://echo.htmlacademy.ru">
       <div class="row justify-content-between w-100 align-items-center">
-        <input name="number-of-exchange" autocomplete="off" spellcheck="false" placeholder="Baribir $ maydalashga kelgansan (rostini ayt hech kimga aytmayman :)) )" class="number-of-exchange form-control w-50 flex-shrink-0" type="number">
+        <input name="number-of-exchange" autocomplete="off" spellcheck="false" placeholder="Baribir $ maydalashga kelgansan (rostini ayt hech kimga aytmayman :)) )" class="number-of-exchange form-control w-50 flex-shrink-0" pattern="[0-9]{,+}" type="number">
         <select required name="rasul" class="currency-type mx-2" id="birnima">
           <!-- <option class="text-uppercase" disabled value="none">Qaysi turidan bor</option> -->
           <option class="text-uppercase" value="10334">USD</option>
